--- a/MathStatRGR.csproj
+++ b/MathStatRGR.csproj
@@ -107,6 +107,12 @@
     <EmbeddedResource Include="Pages\StatisticalEstimatesAndHypothesesPage.resx">
       <DependentUpon>StatisticalEstimatesAndHypothesesPage.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <Compile Include="VarSeriesControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
