Добавляет форму для выбора листа файла Excel

--- a/MathStatRGR.csproj
+++ b/MathStatRGR.csproj
@@ -62,6 +62,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dialogs\SheetSelectionForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dialogs\SheetSelectionForm.Designer.cs">
+      <DependentUpon>SheetSelectionForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
