--- a/MathStatRGR.csproj
+++ b/MathStatRGR.csproj
@@ -125,21 +125,31 @@
     <Compile Include="Pages\StatisticalEstimatesAndHypothesesPage.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Pages\VarSeriesControls.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Pages\VarSeriesControls.Designer.cs">
+      <DependentUpon>VarSeriesControls.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\VarSeriesPage.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\ExcelTableReader.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
+    <Compile Include="Utils\FileDataReader.cs" />
     <EmbeddedResource Include="Pages\StatisticalEstimatesAndHypothesesControls.resx">
       <DependentUpon>StatisticalEstimatesAndHypothesesControls.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Pages\StatisticalEstimatesAndHypothesesPage.resx">
       <DependentUpon>StatisticalEstimatesAndHypothesesPage.cs</DependentUpon>
     </EmbeddedResource>
-    <Compile Include="VarSeriesControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
+    <EmbeddedResource Include="Pages\VarSeriesControls.resx">
+      <DependentUpon>VarSeriesControls.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
