--- a/MathStatRGR.csproj
+++ b/MathStatRGR.csproj
@@ -116,6 +116,7 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\Interval.cs" />
     <Compile Include="Pages\StatisticalEstimatesAndHypothesesControls.cs">
       <SubType>UserControl</SubType>
     </Compile>
