--- a/packages.config
+++ b/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="ExcelDataReader" version="3.7.0" targetFramework="net48" />
   <package id="ExcelDataReader.DataSet" version="3.7.0" targetFramework="net48" />
+  <package id="MathNet.Numerics" version="5.0.0" targetFramework="net48" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.4" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
