--- a/packages.config
+++ b/packages.config
@@ -1,15 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EPPlus" version="8.0.3" targetFramework="net48" />
+  <package id="EPPlus.Interfaces" version="8.0.0" targetFramework="net48" />
   <package id="ExcelDataReader" version="3.7.0" targetFramework="net48" />
   <package id="ExcelDataReader.DataSet" version="3.7.0" targetFramework="net48" />
   <package id="MathNet.Numerics" version="5.0.0" targetFramework="net48" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.4" targetFramework="net48" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.1" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
   <package id="System.IO.Pipelines" version="9.0.4" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Xml" version="8.0.2" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="9.0.4" targetFramework="net48" />
   <package id="System.Text.Json" version="9.0.4" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
